[ORG-ADJST] Repositorie cleaned and organised Adjustment of pages

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <li class="navbar"><a href="index.html">Accueil</a></li>
             <li class="navbar"><a href="#">À propos</a>
                 <ul class="drop">
-                    <li><a href="about.html">Présentation</a></li>
-                    <li><a href="engagement.html">Nos engagements</a></li>
-                    <li><a href="values.html">Nos valeurs</a></li>
-                    <li><a href="key_numbers.html">Chiffres clés</a></li>
-                    <li><a href="innovation.html">Innovation</a></li>
+                    <li><a href="about/about.html">Présentation</a></li>
+                    <li><a href="about/engagement.html">Nos engagements</a></li>
+                    <li><a href="about/values.html">Nos valeurs</a></li>
+                    <li><a href="about/key_numbers.html">Chiffres clés</a></li>
+                    <li><a href="about/innovation.html">Innovation</a></li>
                 </ul>
             </li>
             <li class="navbar"><a href="#">Services</a>
@@ -77,11 +77,10 @@
             <img src="assets/direction/halim.jpg" style="height: 400px;" alt="Abdelhalim FARAJALLAH"><br>
         </div>    
             <p class="le-mot-du-president">
-                "enfaite le feur c'est qu'une question de point de vue, et le point de
-                 vue c'est comme le trou du cul, tout le monde en a un."
+                "le mot du président..."
             </p>
     </div>
-    <div class="all">
+    <!-- <div class="all">
         <div id="home">
             <div class="img_scroll">
                 <img src="assets/mclaren 720s spider.jpg" alt="atalian-logo">
@@ -89,7 +88,7 @@
                 <img src="assets/Corvette C7 Z06.jpg" alt="atalian-logo">
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="barre-de-contact">
         <ul class="CB1">
             <li><a href="contact.html">contact</a></li>
