--- a/about/about.html
+++ b/about/about.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style/about.css">
     <link rel="stylesheet" href="style/style.css">
     <div class="header">
-        <img src="assets/atalian-logo.png" style="width: 100px; height: 100px;" alt="logo atalian">
+        <img src="assets/atalian-logo.png" style="width: 100px; height: 100px;" alt="logo ASW">
         <h1><a href="index.html" class="home">A Simple Way</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
-            <li class="navbar"><a href="index.html">Accueil</a></li>
+            <li class="navbar"><a href="../index.html">Accueil</a></li>
             <li class="navbar"><a href="#">À propos</a>
-                <ul class="about">
+                <ul class="drop">
                     <li><a href="about.html">Présentation</a></li>
                     <li><a href="engagement.html">Nos engagements</a></li>
                     <li><a href="values.html">Nos valeurs</a></li>
@@ -23,19 +23,61 @@
                     <li><a href="innovation.html">Innovation</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Services</a></li>
-            <li class="navbar"><a href="#">Contact</a></li>
+            <li class="navbar"><a href="#">Services</a>
+                <ul class="drop">
+                    <li><a href="#">COVID-19</a></li>
+                    <li><a href="#">Notre offre</a></li>
+                    <li><a href="#">Facility Management</a></li>
+                    <li><a href="#">Propreté & services associés</a></li>
+                    <li><a href="#">Maintenance & Energy</a></li>
+                    <li><a href="#">Sécurité & Sureté</a></li>
+                    <li><a href="#">Assistance aéroportuaire</a></li>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">Restauration</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Implantation</a></li>
+            <li class="navbar"><a href="#">Engagements</a>
+                <ul class="drop">
+                    <li><a href="#">Nos engagements RSE</a></li>
+                    <li><a href="#">Nos engagements Compliance</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Carrirère</a>
+                <ul class="drop">
+                    <li><a href="#">Politique Ressources Humaines</a></li>
+                    <li><a href="#">Notre Politique d'Emploi</a></li>
+                    <li><a href="#">Formation et mobilité</a></li>
+                    <li><a href="#">Nos offres d'emploi</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Medias</a>
+                <ul class="drop">
+                    <li><a href="#">Actualités</a></li>
+                    <li><a href="#">Presse</a></li>
+                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="#">Vidéos</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Investisseur</a>
+                <ul class="drop">
+                    <li><a href="#">Investors News</a></li>
+                    <li><a href="#">Corporate Governance</a></li>
+                    <li><a href="#">Financial information</a></li>
+                    <li><a href="#">Investor Relation</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 </head>
 <body>
-    <img class="laught" src="assets/historique/meeting.jpg" alt="métiers atalian">
+    <img class="laught" src="assets/historique/meeting.jpg" alt="métiers ASW">
     <div class="title1">
         <h2>ASW, Acteur majeur du facility management</h2>
         <p>
             <img src="assets/historique/lavage vitre.png" alt="laveur carreaux façade">
             A Simple Way est l’un des leaders mondiaux du Facility Management. <br>
-            Implanté dans 20 pays sur 4 continents, ATALIAN accompagne les entreprises et les
+            Implanté dans 20 pays sur 4 continents, ASW accompagne les entreprises et les
             organisations dans l’externalisation des services aux bâtiments et aux occupants
             en apportant des solutions personnalisées créatrices de valeur. <br>
             <br>A Simple Way intervient dans les secteurs d’activités et les environnements les
@@ -92,11 +134,11 @@
         <h2>des solutions personnalisées</h2>
         <p>
             Avec sa large palette de savoir-faire métier et d’expertises
-            sectorielles, ATALIAN peut prendre en charge tout ou partie
+            sectorielles, ASW peut prendre en charge tout ou partie
             des services que vous souhaitez externaliser. Ses équipes peuvent
             délivrer des prestations mono-services, multiservices ou full-service
             (FM intégré) en fonction de vos besoins, de votre organisation et de vos budgets. <br><br>
-            ATALIAN effectue en propre plus de 85 % des prestations qui lui sont confiées
+            ASW effectue en propre plus de 85 % des prestations qui lui sont confiées
             et pilote les autres prestations en déléguant leur exécution à des partenaires
             de confiance sélectionnés pour leur qualité de service irréprochable. <br>
             <img src="assets/travail.png" alt="travail bureau">
