--- a/about/engagement.html
+++ b/about/engagement.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="header">
-        <img src="assets/atalian-logo.png" style="width: 100px; height: 100px;" alt="logo atalian">
+        <img src="assets/atalian-logo.png" style="width: 100px; height: 100px;" alt="logo ASW">
         <h1><a href="index.html" class="home">A Simple Way</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
-            <li class="navbar"><a href="index.html">Accueil</a></li>
+            <li class="navbar"><a href="../index.html">Accueil</a></li>
             <li class="navbar"><a href="#">À propos</a>
-                <ul class="about">
+                <ul class="drop">
                     <li><a href="about.html">Présentation</a></li>
                     <li><a href="engagement.html">Nos engagements</a></li>
                     <li><a href="values.html">Nos valeurs</a></li>
@@ -25,8 +25,50 @@
                     <li><a href="innovation.html">Innovation</a></li>
                 </ul>
             </li>
-            <li class="navbar"><a href="#">Services</a></li>
-            <li class="navbar"><a href="#">Contact</a></li>
+            <li class="navbar"><a href="#">Services</a>
+                <ul class="drop">
+                    <li><a href="#">COVID-19</a></li>
+                    <li><a href="#">Notre offre</a></li>
+                    <li><a href="#">Facility Management</a></li>
+                    <li><a href="#">Propreté & services associés</a></li>
+                    <li><a href="#">Maintenance & Energy</a></li>
+                    <li><a href="#">Sécurité & Sureté</a></li>
+                    <li><a href="#">Assistance aéroportuaire</a></li>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">Restauration</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Implantation</a></li>
+            <li class="navbar"><a href="#">Engagements</a>
+                <ul class="drop">
+                    <li><a href="#">Nos engagements RSE</a></li>
+                    <li><a href="#">Nos engagements Compliance</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Carrirère</a>
+                <ul class="drop">
+                    <li><a href="#">Politique Ressources Humaines</a></li>
+                    <li><a href="#">Notre Politique d'Emploi</a></li>
+                    <li><a href="#">Formation et mobilité</a></li>
+                    <li><a href="#">Nos offres d'emploi</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Medias</a>
+                <ul class="drop">
+                    <li><a href="#">Actualités</a></li>
+                    <li><a href="#">Presse</a></li>
+                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="#">Vidéos</a></li>
+                </ul>
+            </li>
+            <li class="navbar"><a href="#">Investisseur</a>
+                <ul class="drop">
+                    <li><a href="#">Investors News</a></li>
+                    <li><a href="#">Corporate Governance</a></li>
+                    <li><a href="#">Financial information</a></li>
+                    <li><a href="#">Investor Relation</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
     <img class="handshake" src="assets/Nos-engagements.jpg" alt="handshake">
