--- a/about/key_numbers.html
+++ b/about/key_numbers.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="style/key.css">
-    <link rel="shortcut icon" href="assets/atalian-logo.png">
+    <link rel="shortcut icon" href="../assets/atalian-logo.png">
 </head>
 <body>
     <div class="header">
-        <img src="assets/atalian-logo.png" style="width: 100px; height: 100px;" alt="logo atalian">
-        <h1><a href="index.html" class="home">A Simple Way</a></h1>
+        
+        <h1><a href="../index.html" class="home">A Simple Way</a></h1>
     </div>
-        <nav class="navbar">
-            <ul class="navbar">
-                <li class="navbar"><a href="../index.html">Accueil</a></li>
-                <li class="navbar"><a href="#">À propos</a>
+    <nav class="navbar">
+        <ul class="navbar">
+            <li class="navbar"><a href="../index.html"><img src="assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
+            <li class="navbar"><a href="#">À propos</a>
                     <ul class="drop">
                         <li><a href="about.html">Présentation</a></li>
                         <li><a href="engagement.html">Nos engagements</a></li>
@@ -27,15 +27,15 @@
                 </li>
                 <li class="navbar"><a href="#">Services</a>
                     <ul class="drop">
-                        <li><a href="#">COVID-19</a></li>
-                        <li><a href="#">Notre offre</a></li>
-                        <li><a href="#">Facility Management</a></li>
-                        <li><a href="#">Propreté & services associés</a></li>
-                        <li><a href="#">Maintenance & Energy</a></li>
-                        <li><a href="#">Sécurité & Sureté</a></li>
-                        <li><a href="#">Assistance aéroportuaire</a></li>
-                        <li><a href="#">Accueil</a></li>
-                        <li><a href="#">Restauration</a></li>
+                        <li><a href="../services/covid.html">COVID-19</a></li>
+                        <li><a href="../services/offre.html">Notre offre</a></li>
+                        <li><a href="../services/facility-management.html">Facility Management</a></li>
+                        <li><a href="../services/proprete.html">Propreté & services associés</a></li>
+                        <li><a href="../services/maintenance.html">Maintenance & Energy</a></li>
+                        <li><a href="../services/securite.html">Sécurité & Sureté</a></li>
+                        <li><a href="../services/assistance-aeroportuaire.html">Assistance aéroportuaire</a></li>
+                        <li><a href="../services/acceuil.html">Accueil</a></li>
+                        <li><a href="../services/restauration.html">Restauration</a></li>
                     </ul>
                 </li>
                 <li class="navbar"><a href="#">Implantation</a></li>
@@ -45,7 +45,7 @@
                         <li><a href="#">Nos engagements Compliance</a></li>
                     </ul>
                 </li>
-                <li class="navbar"><a href="#">Carrirère</a>
+                <li class="navbar"><a href="#"> Carrière</a>
                     <ul class="drop">
                         <li><a href="#">Politique Ressources Humaines</a></li>
                         <li><a href="#">Notre Politique d'Emploi</a></li>
