[UPDT-ADD] Nav bar updated with the ccomplete name of ASWFM; Color of the nav bar changed to white-grey The FM page have been filled and styled

--- a/about/key_numbers.html
+++ b/about/key_numbers.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         
-        <h1><a href="../index.html" class="home">A Simple Way</a></h1>
+        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
@@ -33,7 +33,6 @@
                         <li><a href="../services/proprete.html">Propreté & services associés</a></li>
                         <li><a href="../services/maintenance.html">Maintenance & Energy</a></li>
                         <li><a href="../services/securite.html">Sécurité & Sureté</a></li>
-                        <li><a href="../services/assistance-aeroportuaire.html">Assistance aéroportuaire</a></li>
                         <li><a href="../services/acceuil.html">Accueil</a></li>
                         <li><a href="../services/restauration.html">Restauration</a></li>
                     </ul>
