--- a/services/facility-management.html
+++ b/services/facility-management.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="style/facility-management.css">
     <div class="header">
-        <h1><a href="../index.html" class="home">A Simple Way</a></h1>
+        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
@@ -30,7 +30,6 @@
                     <li><a href="proprete.html">Propreté & services associés</a></li>
                     <li><a href="maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="securite.html">Sécurité & Sureté</a></li>
-                    <li><a href="assistance-aeroportuaire.html">Assistance aéroportuaire</a></li>
                     <li><a href="acceuil.html">Accueil</a></li>
                     <li><a href="restauration.html">Restauration</a></li>
                 </ul>
@@ -95,50 +94,57 @@
         <img class="FM" src="assets/Facility Management/Contract_multiservice.png" alt="contrat Multiservice/Full FM">
         <div class="le_mot_de_eric_soriano">
             <img src="assets/offres/Eric-soriano.png" alt="Eric SORIANO">
+            <p>Concentrez-vous sur votre stratégie, nous nous occupons du reste</p>
+            Eric Soriano – Head of International Business Development.
         </div>
     </div>
+    <h2>Nos points Forts</h2>
     <div class="points_forts">
-        <h2>Nos points Forts</h2>
         <img src="assets/Facility Management/Working_ppl.jpg" alt="working people">
-        <h3>Un Intégrateur des métiers techniques et de services</h3>
-        <ul>
-            <li>85% de nos prestations réalisées en propre</li>
-            <li>Synergie des organisations</li>
-            <li>Excellence opérationnelle</li>
-        </ul>
-        <h3>Une expertise dans le pilotage FM</h3>
-        <ul>
-            <li>Une structure independante 100% dédiée au pilotage</li>
-            <li>Des pilotes de contrats formés aux métiers du FM</li>
-            <li>Un cockpit de pilotage digitalisé</li>
-        </ul>
-        <h3>La force d'un groupe international</h3>
-        <ul>
-            <li>Une délégation sécurisée du risque</li>
-            <li>Une innovation continue et une amélioration permanente</li>
-            <li>Un groupe référent dans le secteur du FM depuis plus de 20 ans</li>
-        </ul>
+        <div class="de-flex">
+            <h3>Un Intégrateur des métiers techniques et de services</h3>
+            <ul>
+                <li>85% de nos prestations réalisées en propre</li>
+                <li>Synergie des organisations</li>
+                <li>Excellence opérationnelle</li>
+            </ul>
+            <h3>Une expertise dans le pilotage FM</h3>
+            <ul>
+                <li>Une structure independante 100% dédiée au pilotage</li>
+                <li>Des pilotes de contrats formés aux métiers du FM</li>
+                <li>Un cockpit de pilotage digitalisé</li>
+            </ul>
+            <h3>La force d'un groupe international</h3>
+            <ul>
+                <li>Une délégation sécurisée du risque</li>
+                <li>Une innovation continue et une amélioration permanente</li>
+                <li>Un groupe référent dans le secteur du FM depuis plus de 20 ans</li>
+            </ul>
+        </div>
     </div>
+    <h2>Vos bénéfices</h2>
     <div class="vos_benefices">
-        <h3>Une amélioration de votre performance financière</h3>
-        <ul>
-            <li>un recentrage sur votre coeur de métier à plus forte valeur ajoutée</li>
-            <li>Des coûts/TCO optimisés</li>
-        </ul>
-        <h3>Une amélioration de votre qualité de services</h3>
-        <ul>
-            <li>Une optimisation de la réactivité et des process de demandes d'intervention</li>
-            <li>Une normalisation de vos services supports</li>
-            <li>Une organisation et des modes de fonctionnement simplifiés</li>
-            <li>Un environnement de travail intégrant une démarche environnementale et le bien-être de vos utilisteurs</li>
-            <li>Des prestations ajustées à l'évolution de votre activité</li>
-            <li>Un partage des best practises</li>
-        </ul>
-        <h3>un meilleur pilotage de vos indicateurs de performance grâce à un environnement digitalisé</h3>
+        <div class="de_flex">
+            <h3>Une amélioration de votre performance financière</h3>
+            <ul>
+                <li>un recentrage sur votre coeur de métier à plus forte valeur ajoutée</li>
+                <li>Des coûts/TCO optimisés</li>
+            </ul>
+            <h3>Une amélioration de votre qualité de services</h3>
+            <ul>
+                <li>Une optimisation de la réactivité et des process de demandes d'intervention</li>
+                <li>Une normalisation de vos services supports</li>
+                <li>Une organisation et des modes de fonctionnement simplifiés</li>
+                <li>Un environnement de travail intégrant une démarche environnementale et le bien-être de vos utilisteurs</li>
+                <li>Des prestations ajustées à l'évolution de votre activité</li>
+                <li>Un partage des best practises</li>
+            </ul>
+            <h3>un meilleur pilotage de vos indicateurs de performance grâce à un environnement digitalisé</h3>
+        </div>
         <img src="assets/Facility Management/desk.jpg" alt="building office">
     </div>
+    <h2>Case Study</h2>
     <div class="Case_study">
-        <h2>Case Study</h2>
         <img src="assets/Facility Management/Airfrance.jpg" alt="AirFrance's plane">
         <div class="wrapper">
             <p>
@@ -150,28 +156,32 @@
                 <li>1 millions de m² de surface de bâtiment</li>
             </ul>
         </div>
-        <img src="assets/Facility Management/David_Dewurst.png" alt="David DEWHURST">
-        <div class="wrapper">
-            <p> La valeur ajoutée essentielle de notre offre réside dans son extrême
-                flexibilité et sa capacité à adapter nos services au juste besoin de
-                nos clients.</p>
-            David DEWHURST - Directeru des Opérations Internationales
-        </div>
     </div>
+    <h2>SPACE MANAGEMENT : COMMENT MIEUX TRAVAILLER INDIVIDUELLEMENT ET COLLECTIVEMENT AU SERVICE DE LA PERFORMANCE ?</h2>
     <div class="space_management">
-        <h2>SPACE MANAGEMENT : COMMENT MIEUX TRAVAILLER INDIVIDUELLEMENT ET COLLECTIVEMENT AU SERVICE DE LA PERFORMANCE ?</h2>
-        <p>
-            Le Space Management vous permet d’optimiser chaque m² de votre espace !
-            En réorganisant votre espace de travail, vous pouvez créer un environnement
-            productif, fonctionnel et adapté à vos pratiques de travail.
-        </p>
-        <ul>
-            <li>Nos équipes vous accompagnent dans la transformation et l’optimisation de votre environnement de travail</li>
-            <li>Aménagement des espaces bureaux, open space, co-working, Brainstorming, espace QVT,…ect</li>
-            <li>Gestion de l’ensemble des déménagements ainsi que les mouvements au sein des entreprises</li>
-            <li>Gestion du parc mobilier avec des propositions innovantes comme le Flex Office</li>
-        </ul>
+        <div class="de-flex">
+            <p>
+                Le Space Management vous permet d’optimiser chaque m² de votre espace !
+                En réorganisant votre espace de travail, vous pouvez créer un environnement
+                productif, fonctionnel et adapté à vos pratiques de travail.
+            </p>
+            <ul>
+                <li>Nos équipes vous accompagnent dans la transformation et l’optimisation de votre environnement de travail</li>
+                <li>Aménagement des espaces bureaux, open space, co-working, Brainstorming, espace QVT,…ect</li>
+                <li>Gestion de l’ensemble des déménagements ainsi que les mouvements au sein des entreprises</li>
+                <li>Gestion du parc mobilier avec des propositions innovantes comme le Flex Office</li>
+            </ul>
+        </div>
         <img src="assets/Facility Management/air_France_Office.jpg" alt="AirFrance's Office">
+    </div>
+    <h2>Réferences clients</h2>
+    <div class="reference">
+        <a href=""><img src="assets/Facility Management/logo/AIRFRANCE.jpg" alt=""></a>
+        <a href=""><img src="assets/Facility Management/logo/Areva.jpg" alt=""></a>
+        <a href=""><img src="assets/Facility Management/logo/Electroluxe.jpg" alt=""></a>
+        <a href=""><img src="assets/Facility Management/logo/Orange.jpg" alt=""></a>
+        <a href=""><img src="assets/Facility Management/logo/Safran.jpg" alt=""></a>
+        <a href=""><img src="assets/Facility Management/logo/Stanley Black & Decker.jpg" alt=""></a>
     </div>
 </body>
 </html>
