--- a/services/restauration.html
+++ b/services/restauration.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW, Notre offre</title>
-    <link rel="stylesheet" href="../../style/style.css">
     <link rel="shortcut icon" href="../assets/atalian-logo.png">
+    <link rel="stylesheet" href="../../style/style.css">
+    <link rel="stylesheet" href="style/restauration.css">
     <div class="header">
-        <h1><a href="../index.html" class="home">A Simple Way</a></h1>
+        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
-            <li class="navbar"><a href="../index.html"><img src="assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
+            <li class="navbar"><a href="../index.html"><img src="../assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
             <li class="navbar"><a href="#">À propos</a>
          
                 <ul class="drop">
@@ -30,7 +31,6 @@
                     <li><a href="proprete.html">Propreté & services associés</a></li>
                     <li><a href="maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="securite.html">Sécurité & Sureté</a></li>
-                    <li><a href="assistance-aeroportuaire.html">Assistance aéroportuaire</a></li>
                     <li><a href="acceuil.html">Accueil</a></li>
                     <li><a href="restauration.html">Restauration</a></li>
                 </ul>
@@ -70,6 +70,22 @@
     </nav>
 </head>
 <body>
-    
+    <h1 class="restauration">Restauration</h1>
+    <img class="restauration" src="assets/Restauration/Restauration.jpg" alt="plates in the Kitchen">
+    <h2>Une gamme de prestation complète</h2>
+    <p class="restauration">
+        Le pôle restauration d’ATALIAN vous offre une gamme complète de services de restauration.
+    </p>
+    <p class="restauration">
+        De la gestion des cantines d’entreprises ou de cafés, en passant par la mise en place de
+        prestations de traiteur pour les événements, peu importe votre secteur, ATALIAN vous propose
+        une cuisine savoureuse, moderne, innovante et sur-mesure pour répondre aux attentes de vos
+        collègues et visiteurs.
+    </p>
+    <p class="restauration">
+        Que vous recherchiez un service de restauration traditionnel, un repas décontracté, une épicerie
+        fine ou un café-restaurant, vous pouvez non seulement être assuré de déguster de délicieux mets,
+        mais également de bénéficier d’une équipe dédiée et passionnée.
+    </p>
 </body>
 </html>
