--- a/services/securite.html
+++ b/services/securite.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../style/style.css">
     <link rel="shortcut icon" href="../assets/atalian-logo.png">
     <div class="header">
-        <h1><a href="../index.html" class="home">A Simple Way</a></h1>
+        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
@@ -30,7 +30,6 @@
                     <li><a href="proprete.html">Propreté & services associés</a></li>
                     <li><a href="maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="securite.html">Sécurité & Sureté</a></li>
-                    <li><a href="assistance-aeroportuaire.html">Assistance aéroportuaire</a></li>
                     <li><a href="acceuil.html">Accueil</a></li>
                     <li><a href="restauration.html">Restauration</a></li>
                 </ul>
