--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/home.css">
     <link rel="shortcut icon" href="assets/atalian-logo.png">
     <div class="header">
-        <h1><a href="index.html" class="home">A Simple Way</a></h1>
+        <h1><a href="index.html" class="home">A Simple Way <br> Facility Management</a></h1>
     </div>
     <nav class="navbar">
         <ul class="navbar">
@@ -30,7 +30,6 @@
                     <li><a href="services/proprete.html">Propreté & services associés</a></li>
                     <li><a href="services/maintenance.html">Maintenance & Energy</a></li>
                     <li><a href="services/securite.html">Sécurité & Sureté</a></li>
-                    <li><a href="services/assistance-aeroportuaire.html">Assistance aéroportuaire</a></li>
                     <li><a href="services/acceuil.html">Accueil</a></li>
                     <li><a href="services/restauration.html">Restauration</a></li>
                 </ul>
